--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "core-js": "^3.25.5",
+    "fraction.js": "^4.2.0",
     "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.9"
   }
