Fractional repair 2nd try

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.25.5",
     "fraction.js": "^4.2.0",
     "fractional": "^1.0.0",
+    "fracty": "^1.0.11",
     "regenerator-runtime": "^0.13.9"
   }
 }
